--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "file-loader": "0.8.4",
     "node-sass": "3.3.0",
     "react": "^0.14.0",
+    "react-bootstrap": "^0.27.2",
     "sass-loader": "2.0.1",
     "style-loader": "0.12.3",
     "url-loader": "0.5.6",
@@ -40,8 +41,8 @@
     "docs": "node_modules/.bin/esdoc -c ./esdoc.json",
     "buildDev": "node_modules/.bin/webpack --progress --colors",
     "buildProd": "node_modules/.bin/webpack --progress --colors --production",
-    "debugDev": "node_modules/.bin/webpack-dev-server --content-base devServer/app --port 3999",
-    "debugProd": "node_modules/.bin/webpack-dev-server --content-base devServer/app --port 3999 --production",
+    "debugDev": "node_modules/.bin/webpack-dev-server --port 3999",
+    "debugProd": "node_modules/.bin/webpack-dev-server --port 3999 --production",
     "test-react": "jest"
   },
   "repository": {
